# opengl-cpp

./: .clang-format  CMakeLists.txt
include/glad/: gl.h
include/opengl/: buffer.hpp  opengl.hpp
include/opengl/buffer/: buffer.hpp
include/opengl/shader/: fragment.hpp  object.hpp  program.hpp  shader.hpp  vertex.hpp
src/: lib.cpp  main.cpp
src/glfw/: Error.hpp  Glfw.hpp  Window.hpp  WindowBuilder.hpp
